admin-gui eclipse errors